<resources>
    <string name="app_name">CalculadoraBonita</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_igual">=</string>
    <string name="btn_sumar">+</string>
    <string name="btn_restar">-</string>
    <string name="btn_multiplicar">x</string>
    <string name="btn_dividir">/</string>
    <string name="tv_numero">0</string>
    <string name="btn_restaurar">Restaurar valores</string>


</resources>