<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#F0F8F9"
    android:backgroundTintMode="add"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="410dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.37">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F0F8F9"
                android:drawableTint="#F0F8F9"
                android:onClick="Seleccion"
                android:text="@string/btn_7"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F0F8F9"
                android:onClick="Seleccion"
                android:text="@string/btn_8"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F0F8F9"
                android:onClick="Seleccion"
                android:text="@string/btn_9"
                android:textColor="#000000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F0F8F9"
                android:onClick="Seleccion"
                android:text="@string/btn_4"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F0F8F9"
                android:onClick="Seleccion"
                android:text="@string/btn_5"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F0F8F9"
                android:onClick="Seleccion"
                android:text="@string/btn_6"
                android:textColor="#000000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F0F8F9"
                android:onClick="Seleccion"
                android:text="@string/btn_1"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F0F8F9"
                android:onClick="Seleccion"
                android:text="@string/btn_2"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F0F8F9"
                android:onClick="Seleccion"
                android:text="@string/btn_3"
                android:textColor="#000000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_restar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F0F8F9"
                android:onClick="Seleccion"
                android:text="@string/btn_restar"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F0F8F9"
                android:onClick="Seleccion"
                android:text="@string/btn_0"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_sumar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F0F8F9"
                android:onClick="Seleccion"
                android:text="@string/btn_sumar"
                android:textColor="#000000"
                android:textSize="20sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_dividir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F0F8F9"
                android:text="@string/btn_dividir"
                android:textColor="#000000"
                android:textSize="20sp"
                android:onClick="Seleccion" />

            <Button
                android:id="@+id/btn_igual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F0F8F9"
                android:onClick="resultado"
                android:text="@string/btn_igual"
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btn_multiplicar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:layout_weight="1"
                android:backgroundTint="#F0F8F9"
                android:onClick="Seleccion"
                android:text="@string/btn_multiplicar"
                android:textColor="#000000"
                android:textSize="20sp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/tv_numero"
        android:layout_width="410dp"
        android:layout_height="125dp"
        android:layout_marginTop="4dp"
        android:background="#BFDEE1"
        android:hint="@string/tv_numero"
        android:maxLength="15"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_restaurar"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="#F0F8F9"
        android:onClick="Restaurar"
        android:text="@string/btn_restaurar"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <TextView
        android:id="@+id/tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="1"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_numero" />

    <TextView
        android:id="@+id/tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginTop="24dp"
        android:hint="2"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/tv_1"
        app:layout_constraintTop_toBottomOf="@+id/tv_numero" />

    <TextView
        android:id="@+id/tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:text="vacio"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_numero" />

</androidx.constraintlayout.widget.ConstraintLayout>